--- a/Front/app/package.json
+++ b/Front/app/package.json
@@ -18,6 +18,7 @@
     "@vue/tsconfig": "^0.8.1",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.9.3",
     "vite": "^7.2.4",
